--- a/src/App.sass
+++ b/src/App.sass
@@ -18,3 +18,8 @@ h1,h2,h3,h4,h5,h6,p,li,ul
     border-radius: 10px
     padding: 20px
 
+
+.HomePage
+    display: flex
+    flex-direction: column
+    gap: 20px
